--- a/terms.html
+++ b/terms.html
@@ -56,7 +56,7 @@
                         <img src="assets/images/ico-aaig-512x512.png" alt="" style="height: 3rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-7" href="#HappyWeb">#AAIG</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-7" href="index.html#top">All American Insurance Group</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
