--- a/policy.html
+++ b/policy.html
@@ -67,14 +67,14 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="about.html#top">
+                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="#">
                             About us</a></li>
-                    <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="buy.html#top">
+                    <li class="nav-item"><a class="nav-link link text-white display-4" href="#">
                             Services</a></li>
-                    <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="buy.html#footer1-u">Contacts</a>
+                    <li class="nav-item"><a class="nav-link link text-white display-4" href="#">Contacts</a>
                     </li></ul>
                 
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-success-outline display-4" href="buy.html#top"><span class="mobi-mbri mobi-mbri-cursor-click mbr-iconfont mbr-iconfont-btn"></span>DO</a></div>
+                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-white-outline display-4" href="buy.html#top"><span class="mobi-mbri mobi-mbri-cursor-click mbr-iconfont mbr-iconfont-btn"></span>DO</a></div>
             </div>
         </div>
     </nav>
