--- a/about.html
+++ b/about.html
@@ -67,14 +67,14 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white display-4" href="#">
+                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="about.html">
                             About us</a></li>
-                    <li class="nav-item"><a class="nav-link link text-white display-4" href="#">
+                    <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="buy.html">
                             Services</a></li>
-                    <li class="nav-item"><a class="nav-link link text-white display-4" href="#">Contacts</a>
+                    <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="index.html#footer1-f">Contacts</a>
                     </li></ul>
                 
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-white-outline display-4" href="buy.html#top"><span class="mobi-mbri mobi-mbri-cursor-click mbr-iconfont mbr-iconfont-btn"></span>DO</a></div>
+                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-white-outline display-4" href="do.html#top"><span class="mobi-mbri mobi-mbri-cursor-click mbr-iconfont mbr-iconfont-btn"></span>DO</a></div>
             </div>
         </div>
     </nav>
@@ -207,8 +207,6 @@
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
-  <script src="assets/ytplayer/jquery.mb.ytplayer.min.js"></script>
-  <script src="assets/vimeoplayer/jquery.mb.vimeo_player.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
