create github pages

--- a/index.html
+++ b/index.html
@@ -262,6 +262,12 @@
     </div>
 </section>
 
+<div id="custom-html-13"><!-- Type valid HTML here -->
+
+<div style="max-width:1600px">
+    <div style="width:100%;height:0;padding-bottom:calc(66.92708333333334% + 40px);position:relative"><iframe style="position: absolute; top: 0; left: 0; right: 0; width: 100%; height: 100%; border: 0;" src="https://static-cdn.spott.ai/embed/?spottId=03f395a3-a082-4a78-905b-43d4d91411cf&amp;forwardOptions=&amp;closetSidebarBackground=&amp;closetSidebarOpenIconColor=&amp;showCopyright=false" frameborder="0" allowfullscreen="" scrolling="no"></iframe></div></div>
+</div>
+
 <section class="testimonials2 cid-s7HpllFtJc" id="testimonials2-9" data-sortbtn="btn-primary">
     
     
@@ -343,7 +349,7 @@
                         <span class="mbr-iconfont ico1 mobi-mbri-video-play mobi-mbri" style="color: rgb(170, 41, 41); fill: rgb(170, 41, 41);"></span>
                     </div>
                     <div class="card-box">
-                        <h3 class="card-title align-left mbr-fonts-style display-5"><a href="#HappyWeb" class="text-warning text-primary">Youtub</a></h3>
+                        <h3 class="card-title align-left mbr-fonts-style display-5"><a href="#HappyWeb" class="text-warning text-primary">Youtube</a></h3>
                         <h4 class="mbr-text align-left mbr-fonts-style display-4">
                             VIDEO</h4>
                     </div>
